Implemented calendar schedule resource generation
