# backend/src/routes.js
@@ -1,12 +1,8 @@
-const fs = require('fs');
-const {v4: uuid} = require('uuid');
 const {generateIcsData} = require('./calendar');
-const path = require('path');
+const {createAndSendFile} = require('./utils');
 
 const {
   getAllTerms,
-  getTermByCode,
-  getCourseByID,
   getUniqueSubjects,
   getAllCourses,
 } = require('./db');
@@ -15,20 +11,21 @@ exports.getSubjects = async (req, res) => {
   const {term: termcode} = req.query;
   const conditions = termcode ? {termcode} : {};
 
-  const rows = await getUniqueSubjects(conditions);
+  const subjects = (await getUniqueSubjects(conditions))
+    .map(({subject}) => subject);
 
-  if (rows.length === 0) res.sendStatus(404);
-  else res.json(rows.map(({subject}) => subject));
+  if (subjects.length === 0) res.sendStatus(404);
+  else res.json(subjects);
 };
 
 exports.getCourses = async (req, res) => {
   const {term: termcode, subject} = req.query;
   const conditions = {termcode, subject};
 
-  const rows = await getAllCourses(conditions);
+  const courses = (await getAllCourses(conditions)).map(formatCourse);
 
-  if (rows.length === 0) res.sendStatus(404);
-  else res.json(rows.map(formatCourse));
+  if (courses.length === 0) res.sendStatus(404);
+  else res.json(courses);
 };
 
 exports.getTerms = async (req, res) => {
@@ -36,51 +33,53 @@ exports.getTerms = async (req, res) => {
   res.json(terms);
 };
 
-exports.genSchedule = async (req, res) => {
-  const {termCode, courses} = req.body;
-  const {
-    formattedTerm,
-    formattedCourses,
-  } = await formatTermAndCourses(res, termCode, courses);
+exports.genSchedule = async (req, res, next) => {
+  try {
+    const {type} = req.params;
+    const {termCode, courseIDs} = req.body;
+    const term = await findTerm(termCode);
+    const courses = [];
+    for (const courseID of courseIDs) {
+      const course = formatCourse(await findCourse(term.code, courseID));
+      courses.push(course);
+    }
+    const termCodeStr = termCode === null ?
+      '' : `termCode=${encodeURIComponent(termCode)}`;
+    const courseIDsStr = courseIDs.reduce(
+      (prev, curr) => `${prev}&courseIDs=${encodeURIComponent(curr)}`,
+      '',
+    );
 
-  res.status(201).json({term: formattedTerm, courses: formattedCourses});
+    const uri = `/api/calendar/${type}?${termCodeStr}${courseIDsStr}`;
+    res.status(201).json({term, courses, uri});
+  } catch (error) {
+    next(error);
+  }
 };
 
-// data is either a string or a binary buffer
-const createAndSendFile = async (res, filename, data) => {
-  return new Promise((resolve, reject) => {
-    const tmpfile = path.join('/tmp', `cc-${uuid()}.ics`);
-    // Create temporary file
-    fs.writeFile(tmpfile, data, (writeError) => {
-      if (writeError) {
-        reject(new Error('could not create temporary file'));
-      }
-      // Send file download to client
-      res.download(tmpfile, filename, (downloadError) => {
-        if (downloadError) {
-          reject(new Error('response download failed'));
-        }
-        // Remove temporary file
-        fs.unlink(tmpfile, (err) => {
-          if (err) reject(new Error('temporary file failed to delete'));
-          else resolve();
-        });
-      });
-    });
-  });
+exports.verifySchedule = async (req, res, next) => {
+  try {
+    const {termCode, courseIDs} = req.query;
+    const term = await findTerm(termCode);
+    const courses = [];
+    for (const courseID of courseIDs) {
+      const course = formatCourse(await findCourse(term.code, courseID));
+      courses.push(formatCourse(course));
+    }
+    req.body = {term, courses};
+    next();
+  } catch (error) {
+    next(error);
+  }
 };
 
 // Returns 'text/calendar' file type
 // Media type reference: https://www.iana.org/assignments/media-types/text/calendar
 exports.genCalendar = async (req, res, next) => {
   try {
-    const {termCode, courses} = req.body;
-    const {
-      formattedTerm,
-      formattedCourses,
-    } = await formatTermAndCourses(res, termCode, courses);
+    const {term, courses} = req.body;
     const downloadName = 'calendar.ics';
-    const icsData = generateIcsData(formattedTerm, formattedCourses);
+    const icsData = generateIcsData(term, courses);
     await createAndSendFile(res, downloadName, icsData);
   } catch (error) {
     console.log(error);
@@ -94,6 +93,7 @@ const formatCourse = (courseObj) => {
     name: courseObj.name,
     professor: courseObj.professor,
     lectures: courseObj.lectures,
+    courseID: courseObj.refnum,
   };
   return courseInfo;
 };
@@ -108,22 +108,4 @@ const formatTerm = (termObj) => {
     },
   };
   return termInfo;
-};
-
-const formatTermAndCourses = async (res, termCode, courses) => {
-  const term = await getTermByCode(termCode);
-  if (term == null) {
-    return res.sendStatus(404);
-  }
-  const formattedTerm = formatTerm(term);
-  const formattedCourses = [];
-  for (const course of courses) {
-    const found = await getCourseByID(termCode, course.courseID);
-    if (found == null) {
-      return res.sendStatus(404);
-    }
-    const formattedCourse = formatCourse(found);
-    formattedCourses.push(formattedCourse);
-  }
-  return {formattedTerm, formattedCourses};
 };
